# fastapi-python-web-apis

./: .env.example  .gitignore  Makefile  README.md  client.http  config.py  main.py  pyproject.toml
app/: config.py  database.py  logger.py  main.py
app/models/: __init__.py  item.py
app/routers/: items.py  random.py
